[ALLI-4516] Initial version of digi.kansalliskirjasto.fi backend.
Not implemented:

- Record page
- Image popup
- Save record
- /Digi/Home content and translations

--- a/themes/finna/less/bootstrap/bootstrap.less
+++ b/themes/finna/less/bootstrap/bootstrap.less
@@ -62,6 +62,7 @@
 @import "finna/public-favorites.less";
 @import "finna/login.less";
 @import "finna/finna-browse.less";
+@import "finna/finna-digi.less";
 @import "finna/finna-feed.less";
 @import "finna/finna-content.less";
 @import "finna/finna-metalib.less";
