--- a/themes/finna/less/bootstrap/finna/holdings.less
+++ b/themes/finna/less/bootstrap/finna/holdings.less
@@ -1,4 +1,7 @@
 /* --  Holdings styling  -- */
+.main.template-dir-digi .record-container .holding-details {
+    display: none;
+}
 .holding-details {
     margin-top: 10px;
     @media (max-width: 400px) {
