--- a/themes/finna/templates/content/about_finna_sites.phtml
+++ b/themes/finna/templates/content/about_finna_sites.phtml
@@ -227,6 +227,10 @@
                 <p class="organisation-list-url">uniarts.finna.fi</p></a>
                 <p class="organisation-list-beta">beta</p>
             </div>
+            <div class="col-xs-6 col-sm-3"> <a href="https://tut.finna.fi"><img src="<?=$this->imageLink('finnafrontpages/tut.jpg')?>" alt="<?=$this->escapeHtmlAttr($this->translate('screenshot_alt_text', ['%%siteurl%%' => 'tut.finna.fi'])); ?>" />
+                <p class="organisation-list-header"><?=$this->transEsc('0/TTY/')?></p>
+                <p class="organisation-list-url">tut.finna.fi</p></a>
+            </div>
             <div class="col-xs-6 col-sm-3"> <a href="https://tamcat.finna.fi"><img src="<?=$this->imageLink('finnafrontpages/tay.jpg')?>" alt="<?=$this->escapeHtmlAttr($this->translate('screenshot_alt_text', ['%%siteurl%%' => 'tamcat.finna.fi'])); ?>" />
                 <p class="organisation-list-header"><?=$this->transEsc('0/TAY/')?></p>
                 <p class="organisation-list-url">tamcat.finna.fi</p></a>
@@ -234,7 +238,7 @@
             </div>
             <div class="col-xs-6 col-sm-3"> <a href="https://tritonia.finna.fi/hanken"><img src="<?=$this->imageLink('finnafrontpages/tritonia_hanken.jpg')?>" alt="<?=$this->escapeHtmlAttr($this->translate('screenshot_alt_text', ['%%siteurl%%' => 'https://tritonia.finna.fi/hanken'])); ?>" />
                 <p class="organisation-list-header"><?=$this->transEsc('tritonia_hanken')?></p>
-                <p class="organisation-list-url">https://tritonia.finna.fi/hanken</p></a>
+                <p class="organisation-list-url">tritonia.finna.fi/hanken</p></a>
             </div>
             <div class="col-xs-6 col-sm-3"> <a href="https://tritonia.finna.fi/uva"><img src="<?=$this->imageLink('finnafrontpages/uva.jpg')?>" alt="<?=$this->escapeHtmlAttr($this->translate('screenshot_alt_text', ['%%siteurl%%' => 'tritonia.finna.fi/uva'])); ?>" />
                 <p class="organisation-list-header"><?=$this->transEsc('0/TRITONIA-UVA/')?></p>
