[ALLI-4906] Tweaked the terms of service dialog so that it fits the screen on iOS devices to avoid trouble with scrolling the modal dialog.

--- a/themes/finna/templates/myresearch/terms_en-gb.phtml
+++ b/themes/finna/templates/myresearch/terms_en-gb.phtml
@@ -1,4 +1,4 @@
-<div class="terms-of-service">
+<div class="terms-of-service terms-of-service-text">
   <div class="terms-of-service-info-box">
     <div class="terms-of-service-logo"><img src="<?=$this->url('home') ?>themes/finna/images/finna-logo-icon.png"></div>
     <div><p>You are logging on to Finna or to a service built on the Finna platform, such as an online library. Finna is an entity designed to provide search services for Finnish libraries, archives, and museums.</p></div>
@@ -15,7 +15,8 @@
   <div class="terms-of-service-info-box terms-of-service-footnote">
     <p>You may need to accept Finna's privacy policy again if you log on to Finna from a different device or browser, have deleted your browsing history, or log on to a Finna website you haven't used before.</p>
   </div>
-
+</div>
+<div class="terms-of-service terms-of-service-controls"
   <p><label><input type="checkbox" name="acceptTerms" value="1" checked="checked" required> I accept the storage and management of my personal information in Finna.</label></p>
   <input type="submit" class="btn btn-primary submit" name="submit" value="Accept">
 </div>
