--- a/themes/finna/templates/myresearch/terms_fi.phtml
+++ b/themes/finna/templates/myresearch/terms_fi.phtml
@@ -1,4 +1,4 @@
-<div class="terms-of-service">
+<div class="terms-of-service terms-of-service-text">
   <div class="terms-of-service-info-box">
     <div class="terms-of-service-logo"><img src="<?=$this->url('home') ?>themes/finna/images/finna-logo-icon.png"></div>
     <div><p>Olet kirjautumassa Finnaan tai Finna-alustalle rakennettuun palveluun, kuten verkkokirjastoon. Finna on kokonaisuus, jolla on toteutettu kirjastojen, arkistojen ja museoiden hakupalveluita.</p></div>
@@ -16,7 +16,8 @@
   <div class="terms-of-service-info-box terms-of-service-footnote">
     <p>Voit joutua hyväksymään henkilötietojesi käsittelyn Finnassa uudelleen, mikäli kirjaudut palveluun eri laitteella tai selaimella kuin aiemmin tai olet tyhjentänyt selainhistoriasi tai kirjaudut Finna-sivustoon, jota et ole käyttänyt aikaisemmin.</p>
   </div>
-
+</div>
+<div class="terms-of-service terms-of-service-controls"
   <p><label><input type="checkbox" name="acceptTerms" value="1" checked="checked" required> Hyväksyn henkilötietojeni tallentamisen ja käsittelyn Finna-palvelussa.</label></p>
   <input type="submit" class="btn btn-primary submit" name="submit" value="Hyväksy">
 </div>
