--- a/themes/finna/templates/myresearch/terms_sv.phtml
+++ b/themes/finna/templates/myresearch/terms_sv.phtml
@@ -1,4 +1,4 @@
-<div class="terms-of-service">
+<div class="terms-of-service terms-of-service-text">
   <div class="terms-of-service-info-box">
     <div class="terms-of-service-logo"><img src="<?=$this->url('home') ?>themes/finna/images/finna-logo-icon.png"></div>
     <div><p>Du håller på att logga in på Finna eller en tjänst byggd på Finna-plattformen, t.ex. ett webbibliotek. Finna  är en helhet som innefattar söktjänster hos bibliotek, arkiv och museer.</p></div>
@@ -16,7 +16,8 @@
   <div class="terms-of-service-info-box terms-of-service-footnote">
     <p>Du kan bli tvungen att godkänna behandlingen av dina personuppgifter i Finna på nytt, om du loggar in på tjänsten från en annan enhet eller med en annan webbläsare än tidigare, eller har tömt cacheminnet eller loggar in på en Finna-webbplats som du inte använt tidigare.</p>
   </div>
-
+</div>
+<div class="terms-of-service terms-of-service-controls"
   <p><label><input type="checkbox" name="acceptTerms" value="1" checked="checked" required> Jag godkänner att mina personuppgifter sparas och behandlas i Finna-tjänsten.</label></p>
   <input type="submit" class="btn btn-primary submit" name="submit" value="Godkänn">
 </div>
