--- a/themes/finna/templates/myresearch/profile.phtml
+++ b/themes/finna/templates/myresearch/profile.phtml
@@ -73,7 +73,7 @@
       <?
         $selectedCard = null;
         foreach ($cards as $card) {
-            if ($card->cat_username === $user->cat_username) {
+            if (strcasecmp($card->cat_username, $user->cat_username) === 0) {
                 $selectedCard = $card;
                 break;
             }
