--- a/themes/finna/templates/RecordDriver/SolrDefault/data-origination.phtml
+++ b/themes/finna/templates/RecordDriver/SolrDefault/data-origination.phtml
@@ -1,2 +1,10 @@
 <? //Don't add START and END comments ?>
 <a href="<?=$this->url('search-results')?>?lookfor=%22<?=urlencode($data)?>%22&amp;type=Author"><?=$this->escapeHtml($data)?></a>
+<? $authorityId = $this->driver->getAuthorityId(); ?>
+<? if ($authorityId): ?>
+<div class="authority-info" data-id="<?=$this->escapeHtmlAttr($authorityId)?>" data-source="<?=$this->escapeHtmlAttr($this->driver->getDataSource())?>">
+  <i class="fa fa-spinner fa-spin"></i>
+  <div class="more-link"><?=$this->transEsc('more')?> <i class="fa fa-handle-open"></i></div>
+  <div class="less-link"><?=$this->transEsc('less')?> <i class="fa fa-handle-close"></i></div>
+</div>
+<? endif ?>
