--- a/themes/finna/templates/RecordDriver/SolrDefault/data-authors.phtml
+++ b/themes/finna/templates/RecordDriver/SolrDefault/data-authors.phtml
@@ -2,7 +2,7 @@
 <? if(!empty($data)): ?>
 <div class="truncate-field">
   <? foreach($data as $index => $author): ?>
-    <?=($index > 0 ? '; ' : '')?><a href="<?=$this->record($this->driver)->getLink('author', $author['name'])?>"><?=$this->escapeHtml($author['name'])?></a><? if (!empty($author['date'])): ?><span class="author-date">, <?=$this->escapeHtml($author['date']) ?></span><? endif; ?><? if (!empty($author['role'])): ?><span class="author-role">, <?=$this->escapeHtml($author['role']) ?></span><? endif; ?>
+    <?=($index > 0 ? '; ' : '')?><?=$this->record($this->driver)->getLink('author', $author['name'], ['a-tag' => true, 'authority' => $author])?><? if (!empty($author['date'])): ?><span class="author-date">, <?=$this->escapeHtml($author['date']) ?></span><? endif; ?><? if (!empty($author['role'])): ?><span class="author-role">, <?=$this->escapeHtml($author['role']) ?></span><? endif; ?>
   <? endforeach; ?>
 </div>
 <? endif; ?>
