--- a/themes/finna/templates/ajax/authority.phtml
+++ b/themes/finna/templates/ajax/authority.phtml
@@ -1,12 +1,10 @@
 <!-- START of: finna - ajax/authority.phtml -->
 <?
-  
   $formatter = $this->recordDataFormatter();
   $coreFields = $formatter->getData(
      $driver, $formatter->filterAuthorityFields($formatter->getDefaults('authority'))
   );
 ?>
-<? var_export($coreFields, true) ?>
 
 <? $description = $driver->getDescription(); ?>
 <? if (!empty($description)): ?>
@@ -21,6 +19,7 @@
 </table>
 <? endif; ?>
 
+<? // NOTE: fullrecord outputted for debugging purposes.
 <? $rawFieldData = $this->driver->getRawData(); ?>
 <? if (!empty($rawFieldData['fullrecord']) && strncmp($rawFieldData['fullrecord'], '<', 1) == 0): ?>
 <pre id="record-data" style="display: none;">
