--- a/themes/finna/templates/myresearch/profile-my-information.phtml
+++ b/themes/finna/templates/myresearch/profile-my-information.phtml
@@ -18,6 +18,18 @@
             <i class="fa fa-info-big"></i>  <?=$this->transEsc("email_info") ?>
           </div>
           <div class="clearfix visible-xs"><br/></div>
+          <br/>
+          <div class="col-sm-4 ">
+            <label for="commentname"><?=$this->transEsc("comment_name") ?>:</label>
+          </div>
+          <div class="col-sm-4">
+            <input id="commentname" type="text" class="form-control" name="commentname" value="<?=$user->commentname?>"/>
+          </div>
+          <div class="clearfix visible-xs"></div>
+          <div class="col-sm-4">
+            <i class="fa fa-info-big"></i>  <?=$this->transEsc("comment_name_info") ?>
+          </div>
+          <div class="clearfix visible-xs"><br/></div>
           <div class="col-xs-12">
               <input id="save-user-profile" name="saveUserProfile" type="submit" value="<?=$this->transEsc("Save") ?>" class="btn btn-primary" />
           </div>
