--- a/themes/finna/less/bootstrap.less
+++ b/themes/finna/less/bootstrap.less
@@ -671,6 +671,9 @@ a.authority {
                 display: block;
             }
         }
+        & .role {
+            color: @gray; 
+        }
     }
     
     .authority-info {
