--- a/themes/finna/templates/RecordDriver/SolrDefault/data-contributors.phtml
+++ b/themes/finna/templates/RecordDriver/SolrDefault/data-contributors.phtml
@@ -5,14 +5,20 @@
     <?
       $url = $this->record($this->driver)->getLink('author', $author['name']);
       $label = $this->escapeHtml($author['name']);
+      $authorityLink = null;
+      if (!empty($author['id'])) {
+         $authorityLink = $this->authority()->link(
+            $url, $label, $author['id'], $author['type'], $author['role'], $this->driver->getDatasource()
+         );
+      }
     ?>
-    <? if (empty($author['id']) || !($authorityLink = $this->authority()->link($url, $label, $author['id'], $author['type'], $this->driver->getDatasource()))): ?>
+    <? if (empty($authorityLink)): ?>
        <?=($index > 0 ? '<br/> ' : '')?><a href="<?=$url?>"><?=$label?></a>
     <? else: ?>
        <?=$authorityLink?>
     <? endif; ?>
 
-    <? if (!empty($author['date'])): ?><span class="author-date">, <?=$this->escapeHtml($author['date']) ?></span><? endif; ?><? if (!empty($author['role'])): ?><span class="author-role">, <?=mb_strtolower($this->transEsc('CreatorRoles::' . $author['role']), 'UTF-8') ?></span><? endif; ?>
+    <? if (!empty($author['date'])): ?><span class="author-date">, <?=$this->escapeHtml($author['date']) ?></span><? endif; ?><? if (empty($authorityLink) && !empty($author['role'])): ?><span class="author-role">, <?=mb_strtolower($this->transEsc('CreatorRoles::' . $author['role']), 'UTF-8') ?></span><? endif; ?>
     <? if (!empty($author['description'])): ?>
       <span class="author-description"> (<?=$this->escapeHtml($author['description'])?>)</span>
     <? endif; ?>
