[ALLI-4659] [ALLI-4600] Support for configurable email forms.

--- a/themes/finna/less/finna/feedback-form.less
+++ b/themes/finna/less/finna/feedback-form.less
@@ -25,3 +25,24 @@ form[name=feedbackRecord] .feedback-info {
     max-width: 100%;
   }
 }
+
+.form {
+    .info {
+        margin: 9.5px 0;
+    }
+    .form-control-input-radio {
+        display: initial;
+        margin-top: -1px;
+        vertical-align: middle;
+    }
+    .radio-label {
+        margin-bottom: 0;
+        font-weight: initial;
+    }
+    & .dynamic-form-group input{
+        
+    }
+    .control-title {
+        margin-bottom: 1.5em;
+    }
+}
