--- a/themes/finna/templates/record/feedback.phtml
+++ b/themes/finna/templates/record/feedback.phtml
@@ -8,9 +8,8 @@
   <p><?=$this->transEsc("record_feedback_instructions"); ?></p>
 <? endif; ?>
 
-<?=$this->flashmessages()?>
-
-  <form class="form feedback-form" method="post" name="feedbackRecord" action="<?= $this->recordLink()->getActionUrl($this->driver, 'Feedback') ?>">
+  <?=$this->flashmessages()?>
+    <form class="form feedback-form" method="post" name="feedbackRecord" action="<?= $this->recordLink()->getActionUrl($this->driver, 'Feedback') ?>">
     <div class="row">
       <input type="hidden" name="id" value="<?= $this->escapeHtmlAttr($this->driver->getUniqueId()) ?>" />
       <div class="form-group col-xs-12">
@@ -21,23 +20,9 @@
         </div>
       </div>
     </div>
-    <div class="row">
-      <div class="form-group col-xs-12">
-        <label for="feedback_from" class="control-label">* <?= $this->TransEsc('email_from'); ?>:</label>
-        <div>
-          <input id="feedback_from" type="text" name="from" size="37" class="form-control" required aria-required="true" value="<?=isset($user->email) ? $user->email : '' ?>" />
-        </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="form-group col-xs-12">
-        <label for="feedback_message" class="control-label">* <?= $this->TransEsc('feedback_message'); ?>:</label>
-        <div>
-          <textarea id="feedback_message" name="feedback_message" rows="3" cols="35" class="form-control" required aria-required="true"></textarea>
-        </div>
-      </div>
-    </div>
-      <div class="form-group">
+    <?= $this->dynamicForm('FeedbackRecord', ['elementsOnly' => true]) ?>
+
+    <div class="form-group">
         <div>
             <input class="btn btn-primary" type="submit" name="submitFeedback" value="<?= $this->TransEsc('Send'); ?>"/>
         </div>
