--- a/themes/finna/templates/myresearch/profile-my-information.phtml
+++ b/themes/finna/templates/myresearch/profile-my-information.phtml
@@ -20,14 +20,14 @@
           <div class="clearfix visible-xs"><br/></div>
           <br/>
           <div class="col-sm-4 ">
-            <label for="commentname"><?=$this->transEsc("comment_name") ?>:</label>
+            <label for="finna_nickname"><?=$this->transEsc("finna_nickname") ?>:</label>
           </div>
           <div class="col-sm-4">
-            <input id="commentname" type="text" class="form-control" name="commentname" value="<?=$user->commentname?>"/>
+            <input id="finna_nickname" type="text" class="form-control" name="finna_nickname" value="<?=$user->finna_nickname?>"/>
           </div>
           <div class="clearfix visible-xs"></div>
           <div class="col-sm-4">
-            <i class="fa fa-info-big"></i>  <?=$this->transEsc("comment_name_info") ?>
+            <i class="fa fa-info-big"></i>  <?=$this->transEsc("finna_nickname_info") ?>
           </div>
           <div class="clearfix visible-xs"><br/></div>
           <div class="col-xs-12">
