--- a/themes/finna/templates/myresearch/profile-my-information.phtml
+++ b/themes/finna/templates/myresearch/profile-my-information.phtml
@@ -18,20 +18,19 @@
             <i class="fa fa-info-big"></i>  <?=$this->transEsc("email_info") ?>
           </div>
           <div class="clearfix visible-xs"><br/></div>
-          <br/>
-          <div class="col-sm-4 ">
+          <div class="my-profile-col">
             <label for="finna_nickname"><?=$this->transEsc("finna_nickname") ?>:</label>
           </div>
-          <div class="col-sm-4">
+          <div class="my-profile-col">
             <input id="finna_nickname" type="text" class="form-control" name="finna_nickname" value="<?=$user->finna_nickname?>"/>
           </div>
           <div class="clearfix visible-xs"></div>
-          <div class="col-sm-4">
+          <div class="my-profile-col">
             <i class="fa fa-info-big"></i>  <?=$this->transEsc("finna_nickname_info") ?>
           </div>
           <div class="clearfix visible-xs"><br/></div>
-          <div class="col-xs-12">
-            <input id="save-user-profile" name="saveUserProfile" type="submit" value="<?=$this->transEsc("Save") ?>" class="btn btn-primary" />
+          <div>
+              <input id="save-user-profile" name="saveUserProfile" type="submit" value="<?=$this->transEsc("Save") ?>" class="btn btn-primary" />
           </div>
       <? endif; ?>
     </form>
