made changes to pregreplace

--- a/themes/finna/less/finna/useraccount.less
+++ b/themes/finna/less/finna/useraccount.less
@@ -72,6 +72,13 @@
                 max-width: 320px;
             }
         }
+        & #finna_nickname {
+            width: 100%;
+            margin-bottom: 5px;
+            @media (max-width: @screen-xs-max) {
+                max-width: 320px;
+            }
+        }
     }
     & .myresearch-profile-header {
         font-size: @font-size-h3;
