--- a/themes/finna/less/finna/myresearch.less
+++ b/themes/finna/less/finna/myresearch.less
@@ -28,7 +28,8 @@
   display: inline-block;
 }
 
-.hold-cover-image {
+.myresearch-grid-list .cover-image {
   max-width: 100px;
   max-height: 200px;
+
 }
