--- a/themes/finna/templates/myresearch/profile-my-information.phtml
+++ b/themes/finna/templates/myresearch/profile-my-information.phtml
@@ -22,8 +22,7 @@
             <label for="finna_nickname"><?=$this->transEsc("finna_nickname") ?>:</label>
           </div>
           <div class="my-profile-col">
-            <? $nickname = !empty($user->finna_nickname) ? $this->escapeHtmlAttr($user->finna_nickname) : $this->escapeHtml(trim($this->userPublicName($user))); ?>
-            <input id="finna_nickname" type="text" class="form-control" name="finna_nickname" value="<?=$nickname?>"/>
+            <input id="finna_nickname" type="text" class="form-control" name="finna_nickname" value="<?=$this->escapeHtml(trim($this->userPublicName($user)))?>"/>
           </div>
           <div class="clearfix visible-xs"></div>
           <div class="my-profile-col">
