--- a/themes/finna/templates/record/comments-list.phtml
+++ b/themes/finna/templates/record/comments-list.phtml
@@ -37,7 +37,7 @@
       <div class="comment-info">
         <small>
           <? $commenter = $this->driver->tryMethod('getUserById', [$comment->user_id]); ?>
-          <strong><?=!empty($commenter['finna_nickname']) ? $commenter['finna_nickname'] : $this->escapeHtml(trim($this->userPublicName($comment))); ?></strong>
+          <strong><?=$this->escapeHtml(trim($this->userPublicName($commenter))); ?></strong>
           <?=$this->escapeHtml($comment->created)?>
           <? if ($own): ?>
             <a href="#" class="edit"><?=$this->transEsc('Edit')?></a>
