Fix loan table toolbar colspan when there are no renewable loans.

--- a/themes/finna/templates/myresearch/checkedout.phtml
+++ b/themes/finna/templates/myresearch/checkedout.phtml
@@ -58,7 +58,7 @@
     <table class="myresearch-table">
       <tr class="toolbar">
         <th class="myresearch-notification"><?=$this->transEsc('cannot renew any checked out items')?></th>
-        <th class="text-right">
+        <th class="text-right" colspan="3">
           <?=$this->render('search/controls/sort.phtml')?>
         </th>
       </tr>
