[ALLI-5252] Fix position of "login to hold" link in results list.

--- a/themes/finna/templates/ajax/status-full.phtml
+++ b/themes/finna/templates/ajax/status-full.phtml
@@ -109,7 +109,7 @@ if ($groupBranches) {
 
 <? if ($groupBranches): ?>
   <div class="holdings-container root <?=$collapseLocations ? ' collapsible' : ''?>">
-    <div class="header<?=!empty($availableTotal) ? ' available' : ''?>">
+    <div class="header<?=!empty($availableTotal) ? ' available' : ''?> clearfix">
       <i class="fa fa-<?=!empty($availableTotal) ? 'ok' : 'remove'?>"></i>
       <span>
         <? if (!empty($availableTotal)): ?>
