refactored code, added html and php check for regex

--- a/themes/finna/templates/myresearch/profile-my-information.phtml
+++ b/themes/finna/templates/myresearch/profile-my-information.phtml
@@ -22,16 +22,14 @@
             <label for="finna_nickname"><?=$this->transEsc("finna_nickname") ?>:</label>
           </div>
           <div class="my-profile-col">
-            <input id="finna_nickname" type="text" class="form-control" name="finna_nickname" value="<?=$this->escapeHtml(trim($this->userPublicName($user)))?>"/>
+            <input id="finna_nickname" type="text" class="form-control" name="finna_nickname" value="<?=$this->escapeHtml(trim($this->userPublicName($user)))?>" required pattern ="^(?!.*[_.]{2})[A-ZÅÄÖa-zåäö0-9_.]{3,24}$" title="<?=$this->transEsc("finna_nickname_restrictions") ?>"/>
           </div>
           <div class="clearfix visible-xs"></div>
           <div class="my-profile-col">
             <i class="fa fa-info-big"></i>  <?=$this->transEsc("finna_nickname_info") ?><br/>
           </div>
           <div class="clearfix visible-xs"><br/></div>
-          <div>
-              <input id="save-user-profile" name="saveUserProfile" type="submit" value="<?=$this->transEsc("Save") ?>" class="btn btn-primary" />
-          </div>
+            <input id="save-user-profile" name="saveUserProfile" type="submit" value="<?=$this->transEsc("Save") ?>" class="btn btn-primary" />
       <? endif; ?>
     </form>
   </div>
