[ALLI-5292] Fix displaying of item barcode in loans list.

--- a/themes/finna/templates/myresearch/checkedout.phtml
+++ b/themes/finna/templates/myresearch/checkedout.phtml
@@ -134,6 +134,10 @@
               <strong><?=$this->transEsc('Year of Publication')?>:</strong> <?=$this->escapeHtml($ilsDetails['publication_year'])?>
               <br />
             <? endif; ?>
+            <? if ($this->displayItemBarcode && !empty($ilsDetails['barcode'])): ?>
+              <strong><?=$this->transEsc('Barcode')?>:</strong> <?=$this->escapeHtml($ilsDetails['barcode'])?>
+              <br />
+            <? endif; ?>
             </div>
           </div>
           <div class="status-column">
