[ALLI-5335] Image popup navigation & style fix (#903)

--- a/themes/finna2/less/finna/search.less
+++ b/themes/finna2/less/finna/search.less
@@ -28,6 +28,11 @@
     position: relative;
   }
 }
+@media (max-width: @screen-xs-max) {
+  .media-left {
+    float: right;
+  }
+}
 
 .resultListLabeling {
   display: none;
@@ -92,7 +97,9 @@ mark, .highlight {
     padding-right: 5px;
   }
 }
-.result .save-record {
+.result .save-record,
+.result .cart-add,
+.result .cart-remove {
   font-size: medium;
   @media(max-width: @screen-xs-max) {
     font-size: 1em;
