--- a/themes/finna2/less/finna/facets.less
+++ b/themes/finna2/less/finna/facets.less
@@ -192,6 +192,10 @@
 
 }
 
+h4 + .list-group.facet {
+  margin-top: 5px;
+}
+
 #side-collapse-publishDate .list-group-item {
     padding: 10px 15px;
     border-bottom-left-radius:@border-radius-base;
