--- a/themes/finna2/templates/record/view.phtml
+++ b/themes/finna2/templates/record/view.phtml
@@ -145,7 +145,7 @@
               <a class="<?=strtolower($tab) ?>"
                  href="<?=$this->recordLink()->getTabUrl($this->driver, $tab)?>#tabnav"<? if ($obj->supportsAjax() && in_array($tab, $this->backgroundTabs)):?>
                 data-background<? endif ?>>
-                <? if (strtolower($tab) == 'details'): ?><i class="fa fa-<?=$this->escapeHtmlAttr($tab)?>"></i><? endif; ?>
+                <? if (strtolower($tab) == 'details'): ?><i class="fa fa-lg fa-<?=$this->escapeHtmlAttr($tab)?>"></i><? endif; ?>
                 <? if (strtolower($tab) != 'details'): ?><?=$this->transEsc($desc)?><? endif; ?><? if (strtolower($tab) == 'usercomments') : ?>(<span class="count"><?= count($this->driver->getComments()) ?></span>)<? endif; ?></a>
             </li>
           <? endforeach; ?>
@@ -176,6 +176,7 @@
                 }
                 if (!$obj->isVisible()) { $accordion_classes[] = 'hidden'; }
                 if (!$obj->supportsAjax()) { $accordion_classes[] = 'noajax'; }
+                if (strtolower($accordion) == 'details') { $accordion_classes[] = 'hidden-xs hidden-sm'; }
                 ?>
             <div <?=count($accordion_classes) > 0 ? ' class="' . implode(' ', $accordion_classes) . '"' : ''?>>
               <div class="accordion-toggle">
