Add classes to all accordion divs in record page and hide details using its class. Add a variable to control the display style.

--- a/themes/finna2/less/finna/accordion.less
+++ b/themes/finna2/less/finna/accordion.less
@@ -34,6 +34,9 @@
       font-style: normal;
     }
   }
+  &.accordion-details {
+    display: @accordion-details-display;
+  }
 }
 
 .record-accordions.record-tabs {
