[ALLI-5343] Fix details tab display.

--- a/themes/finna2/less/finna/accordion.less
+++ b/themes/finna2/less/finna/accordion.less
@@ -34,8 +34,10 @@
       font-style: normal;
     }
   }
-  &.accordion-details {
-    display: @accordion-details-display;
+  &.accordion-details{
+    @media(max-width: @screen-sm-max) {
+      display: @accordion-details-display;
+    }
   }
 }
 
