Reduce navbar padding a bit.

--- a/themes/finna2/less/finna/navigation.less
+++ b/themes/finna2/less/finna/navigation.less
@@ -355,6 +355,7 @@
   .navbar-nav > li > a,
   .navbar-collapse.in .dropdown-menu a {
     color: @header-text-color;
+    padding: 0 10px;
   }
 }
 
