ALLI-5392 Fixes to searchbar width in mobile firefox (#945)

--- a/themes/finna2/less/finna/forms.less
+++ b/themes/finna2/less/finna/forms.less
@@ -81,7 +81,7 @@
   margin: 0px;
   box-shadow: 0px 0px 3px rgba(100,100,100,0.5) !important;
   & .form-control.search-query {
-    flex: 1;
+    flex: 1 1 auto;
     @media (max-width: @screen-xs-max) {
       width: percentage((@finna-search-input-width - 0.06));
       font-size: 1.1em;
