[ALLI-5390] Fix record page layout with IE (#946)

--- a/themes/finna2/less/finna/record.less
+++ b/themes/finna2/less/finna/record.less
@@ -1,4 +1,18 @@
 .record {
+  // .media and .media-body code added to fix IE11 display: table-cell issues
+  .media {
+    display: table;
+    table-layout: fixed;
+    width: 100%;
+    @media(max-width: @screen-sm) {
+      display: block;
+    }
+  }
+
+  .media-body {
+    width: auto;
+  }
+
   .media-left,
   .media-right {
     width: 25%;
