[ALLI-5477] Include current UI language in the social media sharing URLs.

--- a/themes/finna2/templates/RecordDriver/SolrDefault/toolbar.phtml
+++ b/themes/finna2/templates/RecordDriver/SolrDefault/toolbar.phtml
@@ -2,6 +2,7 @@
 <?
   if ($this->driver->tryMethod('socialMediaSharingAllowed') !== false) {
       $shareUrl = $this->serverUrl($this->recordLink()->getUrl($this->driver));
+      $shareUrl .= (strpos($shareUrl, '?') ? '&' : '?') . 'lng=' . urlencode($this->layout()->userLang);
   }
 
   // Set up some variables for convenience:
