--- a/themes/finna2/templates/RecordDriver/SolrDefault/toolbar_mobile.phtml
+++ b/themes/finna2/templates/RecordDriver/SolrDefault/toolbar_mobile.phtml
@@ -1,7 +1,8 @@
 <!-- START of: finna - RecordDriver/SolrDefault/toolbar_mobile.phtml -->
 <?
   if ($this->driver->tryMethod('socialMediaSharingAllowed') !== false) {
-    $shareUrl = $this->serverUrl($this->recordLink()->getUrl($this->driver));
+      $shareUrl = $this->serverUrl($this->recordLink()->getUrl($this->driver));
+      $shareUrl .= (strpos($shareUrl, '?') ? '&' : '?') . 'lng=' . urlencode($this->layout()->userLang);
   }
 
   // Set up some variables for convenience:
